css/styles.css
/* Uses BEM - Block, Element, Modifier Naming Conversion */
/* Block naming e.g card or card-container
Element naming e.g card__item or card-container__item
Modifier naming e.g card--primary or card-container--primary */

:root {
  --color-primary: #2584ff;
  --color-secondary: #00d9ff;
  --color-accent: #ff3400;
  --color-headings: #1b0760;
  --color-body: #918ca4;
  --color-body-darker: #5c5577;
  --color-border: #ccc;
  --border-radius: 30px;
  --color-text: #fff;
}

*,
*::after,
*::before {
  box-sizing: border-box;
}
/* All styles are mobile first */

/* TOPOGRAPHY */
::selection {
  background: var(--color-primary);
  color: var(--color-text);
}

html {
  font-size: 62.5%;
}

body {
  font-family: Inter, Arial, Arial, Helvetica, sans-serif;
  font-size: 2.4rem;
  line-height: 1.5;
  color: var(--color-body);
}

h1,
h2,
h3 {
  color: var(--color-headings);
  margin-bottom: 1rem;
  line-height: 1.1;
}

h1 {
  font-size: 7rem;
}

h2 {
  font-size: 4rem;
}

h3 {
  font-size: 3rem;
}

p {
  margin-top: 0;
}

/* for wide screens or laptops or desktops */
@media screen and (min-width: 1024px) {
  body {
    font-size: 1.8rem;
  }

  h1 {
    font-size: 8rem;
  }

  h2 {
    font-size: 4rem;
  }

  h3 {
    font-size: 2.4rem;
    font-weight: 500;
  }
}

/* LINKS */
a {
  text-decoration: none;
}

.link-arrow {
  color: var(--color-accent);
  text-transform: uppercase;
  font-size: 2rem;
  font-weight: bold;
  transition: margin 0.15s;
}

.link-arrow::after {
  content: "-->";
  margin-left: 5px;
}

.link-arrow:hover::after {
  margin-left: 10px;
}

@media screen and (min-width: 1024px) {
  .link-arrow {
    font-size: 1.5rem;
  }
}

/* BADGES */

/* Badge structure */
.badge {
  border-radius: 20px;
  font-size: 2rem;
  font-weight: 600;
  padding: 0.5rem 2rem;
  white-space: nowrap;
}

/* Badge skin */
/* BEM Modifier defined */
.badge--primary {
  background: var(--color-primary);
  color: var(--color-text);
}

.badge--secondary {
  background: var(--color-secondary);
  color: var(--color-text);
}

.badge--small {
  font-size: 1.6rem;
  padding: 0.5rem 1.5rem;
}

@media screen and (min-width: 1024px) {
  .badge {
    font-size: 1.5rem;
  }

  .badge--small {
    font-size: 1.2rem;
  }
}

/* LISTS */
.list {
  list-style: none;
  padding-left: 0;
}

.list--inline .list__item {
  display: inline-block;
  margin-right: 2rem;
}

.list--tick {
  list-style-image: url(../images/tick.svg);
  padding-left: 3rem;
  color: var(--color-headings);
}

.list--tick .list__item {
  padding-left: 0.5rem;
  margin-bottom: 1rem;
}

@media screen and (min-width) {
  .list--tick .list__item {
    padding-left: 0;
  }
}

/* ICONS */
.icon {
  width: 40px;
  height: 40px;
}

.icon--small {
  width: 30px;
  height: 30px;
}

.icon--primary {
  fill: var(--color-primary);
}

.icon--white {
  fill: #fff;
}

.icon-container {
  width: 64px;
  height: 64px;
  border-radius: 100%;
  background: #f3f9fa;
  display: inline-flex;
  justify-content: center;
  align-items: center;
}

.icon-container--accent {
  background: var(--color-accent);
}

/* BUTTONS */
.btn {
  border-radius: 40px;
  border: 0;
  cursor: pointer;
  font-size: 1.8rem;
  font-weight: 600;
  margin: 1rem 0;
  outline: 0;
  padding: 2rem 3rem;
  text-align: center;
  text-transform: uppercase;
  white-space: nowrap;
}

.btn .icon {
  width: 2rem;
  height: 2rem;
  margin-right: 1rem;
  vertical-align: middle;
}

.btn--primary {
  background: var(--color-primary);
  color: var(--color-text);
}

.btn--primary:hover {
  background: rgba(37, 132, 255, 0.7);
}

.btn--secondary {
  background: var(--color-secondary);
  color: var(--color-text);
}

.btn--secondary:hover {
  background: rgba(0, 217, 255, 0.7);
}

.btn--accent {
  background: var(--color-accent);
  color: var(--color-text);
}

.btn--accent:hover {
  background: rgba(255, 52, 0, 0.7);
}

.btn--outline {
  background: #fff;
  color: var(--color-headings);
  border: 2px solid var(--color-headings);
}

.btn--outline:hover {
  background: var(--color-headings);
  color: var(--color-text);
}

.btn--stretched {
  padding-left: 6rem;
  padding-right: 6rem;
}

.btn--block {
  width: 100%;
  display: inline-block;
}

@media screen and (min-width: 1024px) {
  .btn {
    font-size: 1.5rem;
  }
}

/* INPUTS And INPUT-GROUPS */
.input {
  border-radius: var(--border-radius);
  border: 1px solid var(--color-border);
  color: var(--color-headings);
  font-size: 2rem;
  outline: 0;
  padding: 1.5rem 3.5rem;
}

::placeholder {
  color: #cdcbd7;
}

.input-group {
  border: 1px solid var(--color-border);
  border-radius: var(--border-radius);
  display: flex;
}

.input-group .input {
  border: 0;
  flex-grow: 1;
  padding: 1.5rem 2rem;
}

.input-group .btn {
  margin: 4px;
}

@media screen and (min-width: 1024px) {
  .input {
    font-size: 1.5rem;
  }
}

/* CARDS */
.card {
  border-radius: 7px;
  box-shadow: 0 0 20px 10px #f3f3f3;
  overflow: hidden;
}

.card__header,
.card__body {
  padding: 2rem 3rem;
}

.card--primary .card__header {
  background: var(--color-primary);
  color: var(--color-text);
}

.card--secondary .card__header {
  background: var(--color-secondary);
  color: var(--color-text);
}

.card--primary .badge--primary {
  background: #126de4;
}
.card--secondary .badge--secondary {
  background: #02cdf1;
}

/* PLANS */
.plan {
  transition: transform 0.2s ease-out;
}

.plan__name {
  color: var(--color-text);
  margin: 0;
  font-size: 2.4rem;
  font-weight: 500;
}

.plan__price {
  font-size: 6rem;
}

.plan__billing-cycle {
  font-size: 2.4rem;
  font-weight: 300;
  opacity: 0.8;
  margin-right: 1rem;
}

.plan__description {
  font-size: 2rem;
  font-weight: 300;
  letter-spacing: 1px;
  display: block;
}

.plan .list__item {
  margin-bottom: 2rem;
}

/* .plan--popular {
  transform: scale(1.1);
} */

.plan--popular .card__header {
  position: relative;
}
/* ... */

